--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -8,7 +8,7 @@
   <hr />
 
   <div *ngIf="step === 'quiz' && quiz">
-    <div *ngFor="let question of selectedQuestions;">
+    <div *ngFor="let question of getAllQuestions;">
       <div class="badge badge-info">Question {{pager.index + 1}} of {{pager.count}}.</div>
       <h2>{{pager.index + 1}}. <span [innerHTML]="question.name"></span></h2>
       <div class="row text-left options">
