--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -24,16 +24,37 @@
     </div>
     <hr />
     <div class="text-sm-center">
+      <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(0);">First</button>
       <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(pager.index - 1);">Prev</button>
       <button class="btn btn-primary" (click)="goTo(pager.index + 1);">Next</button>
+      <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(pager.count - 1);">Last</button>
+    </div>
+  </div>
+
+  <div class="row review" *ngIf="step=='review'">
+    <div class="col-sm-4" *ngFor="let question of quiz.questions; let index = index;">
+      <div (click)="goTo(index)" class="{{ isAnswered(question) == 'Answered'? 'answered': 'not-answered' }}">{{index + 1}}. {{ isAnswered(question) }}</div>
     </div>
   </div>
 
   <div class="result" *ngIf="step === 'result'">
     <h2>Quiz Result</h2>
       <div class="score-result">
-        <h4>Your Total Score is: {{score}}</h4>
+        <h4>Your Total Score is: {{score}}/20</h4>
       </div>
+
+    <div *ngFor="let question of quiz.questions; let index = index">
+      <div class="result-question">
+        <h4>{{index + 1}}. {{question.name}}</h4>
+        <div class="row">
+          <div class="col-md-6" *ngFor="let Option of question.options">
+            <input id="{{Option.id}}" type="checkbox" disabled="disabled" [(ngModel)]="Option.selected" /> {{Option.name}}
+
+          </div>
+        </div>
+        <div class="alert {{ isCorrect(question) == 'correct'? 'alert-success': 'alert-danger'}}">Your answer is {{isCorrect(question)}}</div>
+      </div>
+    </div>
 
     <div class="alert alert-info text-sm-center">
       <button type="button" class="btn btn-lg btn-default" (click)="restartQuiz()">Start Over...</button>
@@ -41,6 +62,8 @@
   </div>
   <hr />
   <div *ngIf="step != 'result'">
+    <button class="btn btn-default" (click)="step = 'quiz'">Quiz</button>
+    <button class="btn btn-default" (click)="step = 'review'">Review</button>
     <button class="btn btn-primary" (click)="onSubmit();">Submit Quiz</button>
   </div>
 </div>
